testsuite/tests/properties/invalid_super/bad_args.lkt
import common

class FooNode implements Node[FooNode] {
    @exported fun p(): Int = 1
}

class Example: FooNode implements TokenNode {
    fun p(): Int = node.super("foo")
}

class Number: FooNode implements TokenNode {
}
